Add NRIC generator

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <li><a href="/minify-css/">CSS Minifier</a></li>
 <li><a href="/daniel-wellington/">Daniel Wellington Brand Name Generator</a></li>
 <li><a href="/list-sort/">List Sort</a></li>
+<li><a href="/nric/">NRIC Generator</a></li>
 <li><a href="/paste/">Paste</a></li>
 <li><a href="/pi/">Pi Generator</a></li>
 <li><a href="/random-number/">Random Number Generator</a></li>
