Add wordle link

--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
 <li><a href="/random-string/">Random String Generator</a></li>
 <li><a href="/whatsapp/">WhatsApp Link Generator</a></li>
 </ul>
-<p>Play some <a href="/sudoku/">sudoku</a></p>
+<p>Play some <a href="/sudoku/">sudoku</a> <a href="/wordle/">wordle</a></p>
 </body>
 </html>
